--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ${WWW_DOCUMENT_ROOT}/:/app
 
   nginx:
-    image: nginx:1.22.1-alpine
+    image: bitnami/nginx:1.22
     container_name: nginx
     restart: always
     ports:
